syntax = "proto3";
package playlist;
option go_package = "github.com/go-park-mail-ru/2022_1_Wave/internal/microservices/playlist/playlistProto";
import "google/protobuf/empty.proto";
import "gateway/gatewayProto/gateway.proto";
import "track/trackProto/track.proto";

message Playlist {
  int64 id = 1; // @gotags: json:"id" example:"4" db:"id" validate:"min=0"
  string title = 2; // @gotags: json:"title" example:"Rain" db:"title" validate:"max=256,nonnil"
}

message UserPlaylist {
  int64 userId = 1; // @gotags: json:"userId" example:"4" db:"user_id" validate:"min=0, nonnil"
  int64 playlistId = 2; // @gotags: json:"playlistId" example:"3" db:"playlist_id" validate:"min=0, nonnil"
}

message PlaylistDataTransfer {
  int64 id = 1; // @gotags: json:"id" example:"4"
  string title = 2; // @gotags: json:"title" example:"Rain"
  repeated track.TrackDataTransfer tracks = 3;
}

message PlaylistUseCaseResponse {
  PlaylistDataTransfer data = 1;
}

message PlaylistsResponse {
  repeated Playlist playlists = 1;
}

message UserIdPlaylistArg {
  int64 userId = 1;
  Playlist playlist = 2;
}

message UserIdPlaylistIdArg {
  int64 userId = 1;
  int64 playlistId = 2;
}

message UserIdPlaylistIdTracksArg {
  int64 userId = 1;
  int64 playlistId = 2;
  int64 track_id = 3;
}

service PlaylistUseCase {
  rpc GetAll(google.protobuf.Empty) returns (PlaylistsResponse) {};
  rpc GetAllOfCurrentUser(gateway.IdArg) returns (PlaylistsResponse) {};
  rpc GetLastId(google.protobuf.Empty) returns (gateway.IntResponse) {};
  rpc GetLastIdOfCurrentUser(gateway.IdArg) returns (gateway.IntResponse) {};
  rpc Create(UserIdPlaylistArg) returns (google.protobuf.Empty) {};
  rpc AddToPlaylist(UserIdPlaylistIdTracksArg) returns (google.protobuf.Empty) {};
  rpc RemoveFromPlaylist(UserIdPlaylistIdTracksArg) returns (google.protobuf.Empty) {};
  rpc Update(UserIdPlaylistArg) returns (google.protobuf.Empty) {};
  rpc Delete(UserIdPlaylistIdArg) returns (google.protobuf.Empty) {};
  rpc GetById(gateway.IdArg) returns (Playlist) {};
  rpc GetByIdOfCurrentUser(UserIdPlaylistIdArg) returns (Playlist) {};
  rpc GetSize(google.protobuf.Empty) returns (gateway.IntResponse) {};
  rpc GetSizeOfCurrentUser(gateway.IdArg) returns (gateway.IntResponse) {};
}